17-Azure-Kubernetes-Service/done/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v0.1
    spec:
      containers:
      - name: frontend
        image: REGISTRY_NAME.azurecr.io/frontend:0.1
        ports:
        - containerPort: 3000
