17-Azure-Kubernetes-Service/done/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: frontend.HTTP_ROUTING_DOMAIN
    http:
      paths:
      - pathType: Prefix
        path: "/"
        # note this `backend` isn't our image name but rather the k8s service behind the ingress
        backend:
          service:
            name: frontend
            port:
              number: 3000
